Red pen edits in chapter 3.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -70,7 +70,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 %=========================================================================================================
 
-VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create of a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
+VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
 Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex} and it is not uncommon for VR systems to \textit{``reduce realism in order to achieve the desired real time performance''}~\cite{Chalmers2014}. Particularly for dissemination to the general public in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014} because \textit{``abstraction can be just as engaging to users as a sense of realism''}~\cite{Champion2014}.
 
@@ -84,7 +84,7 @@ One application of alternate reality techniques to the field of cultural heritag
 	\textit{``When using a situated simulation there is then approximate identity between the user’s visual perspective and perception of the real physical environment, and the user’s perspective in(to) the virtual environment as this is audiovisually presented by means of the phone and sitsim’s interface. The relative congruity between the `real' and the `virtual' is obtained by allowing the camera’s position, movement and orientation in the 3D environment, to be constrained by the orientation- and location technology of the smartphone: As the user moves the phone in real space the perspective inside the virtual space changes accordingly.''}~\cite{Liestøl2011}
 \end{quote}
 
-These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon highly accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world scene. Indirect augmented reality forgoes a live camera feed of the real environment in place of previously captured panoramic photographs. Knowing the exact position at which the photographs were captured allows for zero registration error between virtual objects and the photographs, instead moving the registration error to the edges of the device's screen where the photographs meet the real environment from which they were captured. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in a similar manner as to how parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
+These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon highly accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world scene. Indirect augmented reality forgoes a live camera feed of the real environment in place of previously captured panoramic photographs. Knowing the exact position at which the photographs were captured allows for zero registration error between virtual objects and the photographs, moving the registration error to the edges of the device's screen where the photographs meet the real environment from which they were captured. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in a similar manner as to how parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
 
 \begin{quote}
 	\textit{``Moving registration error to the edge of the screen is better in part because it is a more difficult place to detect error due to both the bezel around the screen, and the altered field-of-view parameters of the on-screen image. In many ways, people are also already trained to believe that when they see a view of the real world on the screen of the mobile device it lines up with the world behind it. This is largely due to the proliferation of digital cameras already using the screen as a viewfinder.''}~\cite{Wither2011}
@@ -101,7 +101,7 @@ Whilst one could argue that the experience of using a sitsim platform is similar
   \label{sitsim-1.png}
 \end{figure}
 
-In recognising this distinction a platform in the style of sitsim represents a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality also neatly avoids the somewhat confusing visualisation from Liest\o l et al. of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality~\cite{Liestøl2011}.
+In recognising this distinction a platform in the style of sitsim represents a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality would also avoid the somewhat confusing visualisation from Liest\o l et al. of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality~\cite{Liestøl2011}.
 
 %sitsim-2.png
 
@@ -133,6 +133,8 @@ The Open Virtual Worlds (OVW) research group at the School of Computer Science a
 
 \TwoFig{cathedral_npc_standing.png} {Virtual humans in cathedral reconstruction.} {cathedral_npc_standing.png}
        {cathedral_npc_talking.png} {Conversing with virtual humans in cathedral reconstruction.} {cathedral_npc_talking.png}
+
+\pagebreak
 
 These reconstructions were made using OpenSim, an open source implementation and extension of the Second Life server, which is compatible with the numerous forks of the Second Life client program. This architecture allows straightforward construction and dissemination of the models thanks to accessible modelling tools provided by the Second Life client itself and the client/server model of the platform that allows the reconstructions to be accessed in various deployment scenarios including temporary deployments within controlled network conditions as well as remotely via the Internet.
 
@@ -180,14 +182,14 @@ Although parallel reality as a concept is less critical of accurate registration
 	
 	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction is possible wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site. In this scenario users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts observed from less than several meters away may not be possible due to inaccuracy in the positioning solution.
 	
-	\item Freeform exploration with detailed comparison - Where extremely accurate positioning is available, a style of interaction that allows the user to not only explore and compare general aspects of the real and virtual environments from the equivalent vantage point but also to perform close comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can more closely inspect any particular artefact and perhaps even interact with and effect the virtual artefacts.
+	\item Freeform exploration with detailed comparison - Where extremely accurate positioning is available, a style of interaction that allows the user to not only explore and compare general aspects of the real and virtual environments from the equivalent vantage point but also to perform close comparisons of artefacts is possible. In this scenario not only can users freely compare between real and virtual when walking between different areas of a cultural heritage site, but they can more closely inspect any particular artefact and perhaps even interact with and affect them.
 \end{enumerate}
 
 %=========================================================================================================
 
 \section{The Virtual Time Window}
 \label{the-virtual-time-window}
-The Virtual Time Window (VTW) was a preliminary investigation into the application of parallel reality to virtual heritage, that leveraged the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform, in the style of the familiar modality of alternate reality interaction presented by existing sitsim implementations, that would allow investigation into the parallel reality concept in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach also allows for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
+The Virtual Time Window (VTW) was a preliminary investigation into the application of parallel reality to virtual heritage, that leveraged the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform, leveraging the familiar modality of alternate reality interaction presented by existing sitsim implementations, that would allow investigation into the parallel reality concept in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach also allows for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
 
 VTW is presented as a tablet computer which is capable of tracking its position via GPS, its compass heading (yaw) via magnetometer (`electronic compass') and its pitch via accelerometer. Previous augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
 
@@ -258,7 +260,7 @@ In order to control Second Life's camera in the fashion required for VTW, sensor
 
 VTW considers yaw in terms of magnetic compass bearing, as this provides a value that can be used to directly control the yaw of the virtual camera if the virtual reconstruction within OpenSim is correctly oriented to OpenSim's own compass. Magnetic compass bearings are sensed electronically via a 3-axis microelectromechanical (MEMS) magnetometer, which measures the strength of magnetic field along each of its 3 axes. By comparing the values of each axis to the known direction of the field lines of Earth's magnetic field, a compass bearing relative to the magnetometer's orientation can be calculated. Pitch is sensed using a 3-axis MEMS accelerometer, which measures force of acceleration along each of its 3 axes. In the case of static or slow moving applications, this acceleration is predominantly that caused by the Earth's gravitational pull and by comparing the values between each axis the direction of this acceleration (down toward the centre of the Earth) can be determined in relation to the orientation of the accelerometer itself and thus the accelerometer's own orientation (and that of the tablet it is attached to) can be deduced.
 
-Due to the fact that the WindPad tablet does not feature a built-in magnetometer and its built-in accelerometer is little more than a rudimentary tilt sensor for differentiating between discrete cases of landscape and portrait orientation for screen rotation, it was necessary to interface external magnetometer and accelerometer sensors. The popular Arduino\ArduinoFootnote{} microcontroller platform was used for prototyping with several different sensor packages, including the MMA8452\MMAfootnote{}, the ADXL335\ADXLfootnote{} and the HMC5883L\HMCfootnote{}. The package eventually adopted for use with VTW from this prototyping stage was the HMC6343\HMCtwoFootnote{}, which combines a 3-axis MEMS magnetometer and 3-axis MEMs accelerometer into a single package sporting an I2C serial interface, along with algorithms to internally apply the accelerometer's readings to `tilt compensate' the magnetometer's readings. Figure \ref{arduino_wiring_hmc.png} provides a wiring diagram for connectivity of a HMC6343 to an Arduino Uno R3, with the pinout values provided by table \ref{HMC6343wiringtable} while figure \ref{arduino_joystick_for_second_life_1.jpg} shows an assembled unit.
+Due to the fact that the WindPad tablet does not feature a built-in magnetometer and its built-in accelerometer is little more than a rudimentary tilt sensor for differentiating between discrete cases of landscape and portrait orientation for screen rotation, it was necessary to interface external magnetometer and accelerometer sensors. The popular Arduino\ArduinoFootnote{} microcontroller platform was used for prototyping with several different sensor packages, including the MMA8452\MMAfootnote{}, the ADXL335\ADXLfootnote{} and the HMC5883L\HMCfootnote{}. The package eventually adopted for use with VTW from this prototyping stage was the HMC6343\HMCtwoFootnote{}, which combines a 3-axis MEMS magnetometer and 3-axis MEMs accelerometer into a single package sporting an I2C serial interface, along with algorithms to internally apply the accelerometer's readings to `tilt compensate' the magnetometer's readings. Figure \ref{arduino_wiring_hmc.png} provides a wiring diagram for connectivity of a HMC6343 to an Arduino Uno R3, with the pinout values provided by table \ref{HMC6343wiringtable}, while figure \ref{arduino_joystick_for_second_life_1.jpg} shows an assembled unit.
 
 \begin{figure}[h]
 \centering
@@ -332,7 +334,7 @@ As mentioned in section \ref{SecondLifeMobility} the Second Life client can be c
 
 \begin{enumerate}
 	\item Encapsulating the compass bearing and yaw values into mouse, keyboard and/or joystick commands.
-	\item Modifying to the Second Life client to allow the compass bearing and yaw values to be used directly at a lower level of abstraction.
+	\item Modifying the Second Life client to allow the compass bearing and yaw values to be used directly at a lower level of abstraction.
 \end{enumerate}
 
 Method 1 presented the advantage of maintaining compatibility with all Second Life clients, as all clients are forks of the same official client from Linden Lab and feature the same keyboard, mouse and joystick interfaces. However if the level of control attainable by re-purposing these interfaces for control from magnetometer and accelerometer data was not sufficient, method 2 would represent the only workable option.
